--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-flask==3.0.0
-flask-cors==4.0.0
-pandas==2.2.0
-vaderSentiment==3.3.2
-numpy==1.26.4
-gunicorn==21.2.0
+flask>=3.0.0
+flask-cors>=4.0.0
+pandas>=2.0.0
+vaderSentiment>=3.3.2
+numpy>=1.24.0
+gunicorn>=21.0.0
